[gd_scene load_steps=4 format=1]

[ext_resource path="res://scenes/Board.gd" type="Script" id=1]
[ext_resource path="res://dat/img/board.png" type="Texture" id=2]
[ext_resource path="res://dat/font/ingame.fnt" type="BitmapFont" id=3]

[node name="Panneau" type="Node2D"]

script/script = ExtResource( 1 )

[node name="PanneauImg" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

transform/pos = Vector2( 0, 1.90735e-06 )
transform/scale = Vector2( 6, 2 )
input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="FondPanneau" type="ColorFrame" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -384.0
margin/top = -192.0
margin/right = 384.0
margin/bottom = 192.0
color = Color( 0, 0, 0, 0.498039 )

[node name="TextePanneau" type="Label" parent="FondPanneau"]

rect/scale = Vector2( 2, 4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = 64.0
margin/right = 384.0
margin/bottom = 128.0
custom_fonts/font = ExtResource( 3 )
text = "Je Suis Un Panneau"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]


